--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,11 @@
 
     <div class="profile">
       <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
-      <h1 class="text-light"><a href="index.html">Pedro Castro</a></h1>
+      <h1 class="text-light"><a href="index.html">Alexis Castro</a></h1>
       <div class="social-links mt-3 text-center">
         <!--  <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
         <!-- <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a> -->
-        <a href="https://github.com/castrosoft" class="github"><i class="bx bxl-github"></i></a>  
+        <a href="https://github.com/castrosoft" class="github"><i class="bx bxl-github"></i></a>
         <a href="https://www.linkedin.com/in/cp-castropedro/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
@@ -36,7 +36,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Pedro Castro - Index</title>
+  <title>Alexis Castro - Index</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -72,8 +72,8 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1>Pedro Castro</h1>
-      <p>I'm <span class="typed" data-typed-items="a QA Analyst, an enthusiastic person, a Footballer"></span></p>
+      <h1>Alexis Castro</h1>
+      <p>Soy <span class="typed" data-typed-items="ex futbolista, coach ontológico, un crack"></span></p>
     </div>
   </section><!-- End Hero -->
 
