--- a/src/index.html
+++ b/src/index.html
@@ -15,18 +15,18 @@
       <h1 class="text-light"><a href="index.html">Alexis Castro</a></h1>
       <div class="social-links mt-3 text-center">
         <!--  <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
-        <!-- <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a> -->
-        <a href="https://github.com/castrosoft" class="github"><i class="bx bxl-github"></i></a>
+        <a href="https://www.instagram.com/castronico_84/" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <!--  <a href="https://github.com/castrosoft" class="github"><i class="bx bxl-github"></i></a> -->
         <a href="https://www.linkedin.com/in/cp-castropedro/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
 
     <nav id="navbar" class="nav-menu navbar">
       <ul>
-        <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
-        <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-        <li><a href="#skills" class="nav-link scrollto"><i class="bx bx-cog"></i> <span>Skills</span></a></li>
-        <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+        <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Inicio</span></a></li>
+        <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>Acerca de</span></a></li>
+        <li><a href="#services" class="nav-link scrollto"><i class="bx bx-cog"></i> <span>Campeonatos</span></a></li>
+        <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Trayectoria</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
   </div>
